--- a/index.html
+++ b/index.html
@@ -94,8 +94,9 @@
   <!-- Market Section -->
   <div id="market" class="section active">
     <h2>🎁 Market</h2>
+
     <div class="gift-card">
-      <img src="https://p-o-r-n-o.pro/static/images/gifts/ezgif.com-gif-maker_4.gif" alt="Gift 1">
+      <img src="https://p-o-r-n-o.pro/static/images/gifts/ezgif.com-gif-maker_4.gif" alt="Gift 1" loading="lazy">
       <div class="star-overlay">
         <img src="https://p-o-r-n-o.pro/static/images/star-icon.png" alt="Star">
         9999999999
@@ -103,7 +104,7 @@
     </div>
 
     <div class="gift-card">
-      <img src="https://p-o-r-n-o.pro/static/images/gifts/sticker_030gifts-ezgif.com-gif-maker.gif" alt="Gift 2">
+      <img src="https://p-o-r-n-o.pro/static/images/gifts/sticker_030gifts-ezgif.com-gif-maker.gif" alt="Gift 2" loading="lazy">
       <div class="star-overlay">
         <img src="https://p-o-r-n-o.pro/static/images/star-icon.png" alt="Star">
         9999999999
